service et route

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,12 @@ body {
 
 <hr>
 
-<app-heroes></app-heroes>
+<nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/heroes">Heroes</a>
+</nav>
+
+<hr>
 
 <router-outlet></router-outlet>
+<app-messages></app-messages>
