Ajout des héros et armes en cours

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,8 @@ body {
 <hr>
 
 <nav>
-  <a routerLink="/dashboard">Dashboard</a>
-  <a routerLink="/heroes">Heroes</a>
+  <a routerLink="/dashboard">Accueil</a>
+  <a routerLink="/heroes">Héros</a>
 </nav>
 
 <hr>
