Fix des pages de détail

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@ body {
 <nav>
   <a routerLink="/dashboard">Accueil</a>
   <a routerLink="/heroes">Héros</a>
+  <a routerLink="/weapons">Armes</a>
 </nav>
 
 <hr>
