--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <h3>Top des Héros</h3>
 <div class="grid grid-pad">
   <a *ngFor="let hero of heroes" class="col-1-4"
-     routerLink="/heroDetail/{{hero.id}}">
+     routerLink="/herodetail/{{hero.id}}">
     <div class="module hero">
       <h4>{{hero.name}}</h4>
     </div>
@@ -13,7 +13,7 @@
 <h3>Top des Armes</h3>
 <div class="grid grid-pad">
   <a *ngFor="let weapon of weapons" class="col-1-4"
-     routerLink="/weaponDetail/{{weapon.id}}">
+     routerLink="/weapondetail/{{weapon.id}}">
     <div class="module weapon">
       <h4>{{weapon.name}}</h4>
     </div>
