--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -8,6 +8,13 @@
 
   <div>
     <label for="name">Nom :</label> <input id="name" [(ngModel)]="hero.name" placeholder="Nom"/><br/><br/>
+
+    <label for="name">Arme :</label>
+    <select id="weapon" [(ngModel)]="hero.weapon">
+      <option value="" disabled>Sélectionnez l'arme du héro !</option>
+      <option *ngFor="let weapon of weapons" [class.selected]="weapon === hero.weapon">{{weapon.name}}</option>
+    </select>
+
     <label for="attack">Attaque :</label> <input id="attack" type="number" min="1" max="36" [(ngModel)]="hero.attack" placeholder="Points d'attaque"/>
     <label for="dodge">Esquive :</label> <input id="dodge" type="number" min="1" max="36" [(ngModel)]="hero.dodge" placeholder="Points d'esquive"/>
     <label for="damage">Dégâts :</label> <input id="damage" type="number" min="1" max="36" [(ngModel)]="hero.damage" placeholder="Points de dommage"/>
