Ajout de Firebase

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -7,3 +7,6 @@
     </a>
   </li>
 </ul>
+
+Ajouter un héro :
+<button class="button" type="button" (click)="newHeroAction()">Créer héro test</button>
