--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,9 +1,9 @@
 <h2>Liste des héros</h2>
 
 <ul class="heroes">
-  <li *ngFor="let hero of heroes">
+  <li *ngFor="let hero of heroes" class="p-2">
     <a routerLink="/herodetail/{{hero.id}}">
-      <span class="badge">{{hero.id}}</span> {{hero.name}}
+      {{hero.name}}
     </a>
   </li>
 </ul>
