--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
     <div class="nav-item">
       <a routerLink="/weapons">Armes</a>
     </div>
+    <div class="nav-item">
+      <a routerLink="/fight">Jouer</a>
+    </div>
   </div>
 
   <hr>
