--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,21 +1,18 @@
 <h3>Top des Héros</h3>
-<div class="grid grid-pad">
-  <a *ngFor="let hero of heroes" class="col-1-4" routerLink="/herodetail/{{hero.id}}">
+<div class="grid grid-pad mt-2">
+  <a *ngFor="let hero of heroes" class="col-1-4" routerLink="/hero/{{hero.id}}">
     <div class="module hero">
       <h4>{{hero.name}}</h4>
     </div>
   </a>
 </div>
 
-<hr>
 
 <h3>Top des Armes</h3>
-<div class="grid grid-pad">
-  <a *ngFor="let weapon of weapons" class="col-1-4" routerLink="/weapondetail/{{weapon.id}}">
+<div class="grid grid-pad mt-2">
+  <a *ngFor="let weapon of weapons" class="col-1-4" routerLink="/weapon/{{weapon.id}}">
     <div class="module weapon">
       <h4>{{weapon.name}}</h4>
     </div>
   </a>
 </div>
-
-<hr>
