--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -5,7 +5,8 @@
   padding: 0;
   width: 15em;
 }
-.heroes li {
+.hero {
+  display: block;
   cursor: pointer;
   position: relative;
   left: 0;
@@ -14,16 +15,16 @@
   padding: .3em 0;
   border-radius: 4px;
 }
-.heroes li:hover {
+.hero:hover {
   color: #607D8B;
   background-color: #DDD;
   left: .1em;
 }
-.heroes li.selected {
+.hero.selected {
   background-color: #CFD8DC;
   color: white;
 }
-.heroes li.selected:hover {
+.hero.selected:hover {
   background-color: #BBD8DC;
   color: white;
 }
