Validation des formulaires, normalisation, suppression des objets

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -7,6 +7,10 @@
 
       <p class="card-text">
         <label for="name">Nom :</label> <input class="form-control" id="name" [(ngModel)]="hero.name" placeholder="Nom"/>
+        <label for="weapon">Arme :</label>
+        <select class="form-control" id="weapon" [(ngModel)]="hero.weapon">
+          <option *ngFor="let weapon of weapons" [value]="weapon.id">{{weapon.name}}</option>
+        </select>
         <label for="attack">Attaque :</label> <input class="form-control" id="attack" type="number" min="1" max="36" [(ngModel)]="hero.attack" placeholder="Points d'attaque"/>
         <label for="dodge">Esquive :</label> <input class="form-control" id="dodge" type="number" min="1" max="36" [(ngModel)]="hero.dodge" placeholder="Points d'esquive"/>
         <label for="damage">Dégâts :</label> <input class="form-control" id="damage" type="number" min="1" max="36" [(ngModel)]="hero.damage" placeholder="Points de dommage"/>
