--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -6,17 +6,21 @@
     <th *ngFor="let filter of filterElements; let i = index" aria-controls="tableSortHeroes" scope="col" [mdbTableSort]="heroes" [sortBy]="filterElements[i]">{{ filter | titlecase }}
       ⇵
     </th>
+    <th>
+      Action
+    </th>
   </tr>
   </thead>
   <tbody>
   <tr *ngFor="let hero of heroes; let i = index">
     <th scope="row">
-      <a routerLink="/weapon/{{ hero.id }}">{{ hero.name }}</a>
+      <a routerLink="/hero/{{ hero.id }}">{{ hero.name }}</a>
     </th>
     <td>{{ hero.attack }}</td>
     <td>{{ hero.health }}</td>
     <td>{{ hero.damage }}</td>
     <td>{{ hero.dodge }}</td>
+    <td><a (click)="deleteHero(hero)" class="btn btn-danger btn-sm text-white">Supprimer</a></td>
   </tr>
   </tbody>
 </table>
